force-app/main/default/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    <description>(US-4200)This object is used to store survey response data and link it to related Client or Case</description>
    <label>Survey Response</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Survey Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>