force-app/main/default/objects/Survey_Response__c/fields/NPS_Answer__c.field-meta.xml
<CustomField>
    <fullName>NPS_Answer__c</fullName>
    <description>(US-4200)The numeric response of the respondent to the question.</description>
    <inlineHelpText>What was the respondents answer?</inlineHelpText>
    <label>NPS Answer</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>