force-app/main/default/objects/Survey_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>(US-4200)The question on the survey that the client responded to.</description>
    <inlineHelpText>What is the question the respondent answered?</inlineHelpText>
    <label>Question</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>