force-app/main/default/objects/Survey_Response__c/fields/WhatID__c.field-meta.xml
<CustomField>
    <fullName>WhatID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(US-4200)Lookup to Case</description>
    <label>WhatID</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>