force-app/main/default/objects/Survey_Response__c/fields/WhoID__c.field-meta.xml
<CustomField>
    <fullName>WhoID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>(US-4200)A lookup to a Contact or Client.</description>
    <inlineHelpText>Who is this response linked to?</inlineHelpText>
    <label>WhoID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>