force-app/main/default/objects/Survey_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>NPS_Answer__c</columns>
    <columns>WhoID__c</columns>
    <columns>WhatID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>